player is being worked on

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,15 @@ body {
     text-wrap: balance;
   }
 }
+
+/* ?Video player */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
