--- a/src/components/videoPlayer/videoPlayer.css
+++ b/src/components/videoPlayer/videoPlayer.css
@@ -49,7 +49,8 @@ video::-webkit-media-controls {
 .video-controls-container::before {
   content: "";
   position: absolute;
-  bottom: 0;
+  /* *for some reason bottom on this is one pixel off the bottom so we go with -1px */
+  bottom: -1px;
   background: linear-gradient(0deg, #0000009e, #00000000);
   width: 100%;
   aspect-ratio: 6/1;
@@ -157,4 +158,14 @@ video {
 .volume-slider:focus-within {
   width: 100px;
   transform: scaleX(1);
+}
+
+.duration-container {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.video-container.captions .captions-btn {
+  border-bottom: 2px solid red;
 }
